--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
         </div>
         <div id="choose2">
           <img
-            src="img/nyckelfärdigt_icon-284x253.jpeg"
+            src="img/nyckelfärdigt_icon-284x253.jpeg"
             alt="klimatskal"
             style="width: 30%"
           />
           <h1 class="choose-title">Nyckelfärdigt</h1>
           <p class="choose-text">
-            HNyckelfärdigt innebär att ditt hus är helt färdigt för inflyttning.
+            Nyckelfärdigt innebär att ditt hus är helt färdigt för inflyttning.
             För dig som inte kan, vill eller har tiden att bygga och koordinera
             ett husbygge själv!
           </p>
