--- a/index.html
+++ b/index.html
@@ -1,239 +1,220 @@
 <!DOCTYPE html>
 <!-- Language, change to SV -->
 <html lang="sv">
+
 <head>
-    <meta charset="UTF-8">
-    <!--Viewport-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--CEO, Sökmotoroptimering-->
-    <meta name="description" content="Här finner ni erat drömhus">
-    <link rel="stylesheet" href="style.css">
-    <!--Adding JS link file-->
-    <script src="app.js" defer></script>
-    <title>Huspunkten</title>
-    <!--(Validated above 2022-09-08 09:57)-->
+  <meta charset="UTF-8">
+  <!--Viewport-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--CEO, Sökmotoroptimering-->
+  <meta name="description" content="Här finner ni erat drömhus">
+  <link rel="stylesheet" href="style.css">
+  <!--Adding JS link file-->
+  <script src="app.js" defer></script>
+  <title>Huspunkten</title>
+  <!--(Validated above 2022-09-08 09:57)-->
 </head>
+
 <body>
-    <!--Navbar-->
-    <nav class="navbar">
-        <!-- Ev. logotyp img element i div -->
-        <div class="brand-title">HUSPUNKTEN</div>
-        <!--Links, hamburgerbar to make the site responsive-->
-        <!---->
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a> 
-        <!--Navbar in desktop mode-->
-        <div class="navbar-links">
-            <ul>
-                <li><a href="#">Hem</a></li>
-                <li><a href="contact-form">Kontakt</a></li>
-            </ul>
-        </div>
-    </nav>
-    <!--Validated 10:15-->
+  <!--Navbar-->
+  <nav class="navbar">
+    <!-- Ev. logotyp img element i div -->
+    <div class="brand-title">HUSPUNKTEN</div>
+    <!--Links, hamburgerbar to make the site responsive-->
+    <!---->
+    <a href="#" class="toggle-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </a>
+    <!--Navbar in desktop mode-->
+    <div class="navbar-links">
+      <ul>
+        <li><a href="#">Hem</a></li>
+        <li><a href="contact-form">Kontakt</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!--Validated 10:15-->
 
-    <!--Hero Section-->
-    <section class="hero-image">
-        <div class="hero-text">
-            <h1>DIN DRÖM</h1>
-            <h1>VÅRT UPPDRAG</h1>
-            <h2 id="usp-text">
-                Vilken är ert drömhus?<br>
-                En ny bostad i villakvarteret, ett fjällhus mitt i skidbacken, ett sommarhus i skärgården, eller kanske ett Attefallshus för uthyrning.
-            </h2>
-            <button class="btn" onclick="window.location.href='https://iths.se';">Läs mer</button>
-        </div>
+  <!--Hero Section-->
+  <section class="hero-image">
+    <div class="hero-text">
+      <h1>DIN DRÖM</h1>
+      <h1>VÅRT UPPDRAG</h1>
+      <h2 id="usp-text">
+        Vilken är ert drömhus?<br>
+        En ny bostad i villakvarteret, ett fjällhus mitt i skidbacken, ett sommarhus i skärgården, eller kanske ett
+        Attefallshus för uthyrning.
+      </h2>
+      <button class="btn" onclick="window.location.href='https://iths.se';">Läs mer</button>
+    </div>
 
-    </section>
-    <!--Testimonial Section, Grid area-->
-    <section class="testimonial-grid-container">
-        <div id="comment1"></div>
-        <div id="comment2">
-            <h2>En husleverantör med stark framtidsvision!</h2>
-            <p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div id="comment3">
-            <h2>En husleverantör med stark framtidsvision!</h2>
-            <p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</p>
-            <button class="btn2" onclick="window.location.href='#';">Läs mer</button>
-        </div>
-        <div id="comment4"></div>
-    </section>
-    <!--Slideshow-->
-    <section class="slideshow">
-        <div class="slideshow-container">
-          <div class="mySlides fade">
-            <img src="img/hus1.jpg" alt="hus1" />
-            <h1 class="mySlides-header">Fritidshus 40-60kvm</h1>
-            <p class="mySlides-text">
-              Pris från: <strong>299.000:- inkl moms</strong>
-            </p>
-          </div>
-  
-          <div class="mySlides fade">
-            <img src="img/hus2.jpeg" alt="hus2" />
-            <h1 class="mySlides-header">Fritidshus 60-90kvm</h1>
-            <p class="mySlides-text">
-              Pris från: <strong>499.000:- inkl moms</strong>
-            </p>
-          </div>
-  
-          <div class="mySlides fade">
-            <img src="img/hus3.jpg" alt="hus3" />
-            <h1 class="mySlides-header">Fritidshus 90-110kvm</h1>
-            <p class="mySlides-text">
-              Pris från: <strong>699.000:- inkl moms</strong>
-            </p>
-          </div>
-        </div>
-      </section>
-  
-      <!--Grid Container-->
-      <section class="title">
-        <h1>Nästa steg</h1>
-      </section>
-      <section class="info-grid-container">
-        <!--Grid Areas-->
-        <div id="info1"></div>
-        <div id="info2">
-          <h2>Hur går processen till?</h2>
-          <p>
-            Vi hjälper dig från idé till nyckelfärdigt hus. Går du i tankarna att
-            beställa ett fritdshus, ett attefallshus, en friggebod eller en
-            permanentbostad från Huspunkten kommer vårt online verktyg vara till
-            stor hjälp!<br />
-            <br />
-            Är du markägare eller exploatör? Se hit! Vi kan snabbt leverera
-            nyckelfärdiga moduler som gör att ni som exploatör kan få ert projekt
-            paketerat med hus eller lägenheter klart på rekordtid.
-          </p>
-        </div>
-  
-        <div id="info3">
-          <h2>Upplev huset innan det är byggt!</h2>
-          <p>
-            Med Huspunktens nya app kan du genom din mobiltelefon eller surfplatta
-            placera din utvalda husmodell i verklig miljö.
-            <br />
-            <br />
-            Närliggande byggnader och landskap förstärker verkligheten och visar
-            dig hur ditt hus faktiskt kommer att se ut på just din tomt. Du kan
-            till och med gå in i huset och titta ut genom fönstret.
-            <br />
-            <br />
-            Ladda ner vår app här nedan för att testa redan nu!
-          </p>
-          <div class="download">
-            <div class="google"></div>
-            <div class="ios"></div>
-          </div>
-        </div>
-  
-        <div id="info4"></div>
-      </section>
-  
-      <!--Choose section grid-->
-      <section class="title">
-        <h1>Välj mellan flera utföranden!</h1>
-      </section>
-      <section class="choose-grid-container">
-        <!--Grid Areas-->
-        <div id="choose1">
-          <img
-            src="img/klimatskal2_icon-284x253.jpeg"
-            alt="klimatskal"
-            style="width: 30%"
-          />
-          <h1 class="choose-title">Klimatskal</h1>
-          <p class="choose-text">
-            Huset är stomrest och väderskyddat. Du behöver enbart bygga klart
-            invändigt – vi lämnar de roligaste byggetapperna till dig!
-          </p>
-        </div>
-        <div id="choose2">
-          <img
-            src="img/nyckelfärdigt_icon-284x253.jpeg"
-            alt="klimatskal"
-            style="width: 30%"
-          />
-          <h1 class="choose-title">Nyckelfärdigt</h1>
-          <p class="choose-text">
-            Nyckelfärdigt innebär att ditt hus är helt färdigt för inflyttning.
-            För dig som inte kan, vill eller har tiden att bygga och koordinera
-            ett husbygge själv!
-          </p>
-        </div>
-        <div id="choose3">
-          <img
-            src="img/anpassa_icon-284x253.jpeg"
-            alt="klimatskal"
-            style="width: 30%"
-          />
-          <h1 class="choose-title">Skräddarsytt</h1>
-          <p class="choose-text">
-            Om ingen av våra modeller passar dig finns möjligheten att få huset
-            arkitektritat helt i enlighet med dina önskemål.
-          </p>
-        </div>
-      </section>
-  
-      <!--Section contact form-->
-      <section class="title">
-        <h1>Att fråga är gratis</h1>
-      </section>
-      <section id="form" class="form">
-        <div class="container">
-          <form action="action_page.php" method="post">
-            <label for="fname">Förnamn</label>
-            <input
-              type="text"
-              id="fname"
-              name="firstname"
-              placeholder="Ditt förnamn.."
-            />
-  
-            <label for="lname">Efternamn</label>
-            <input
-              type="text"
-              id="lname"
-              name="lastname"
-              placeholder="Ditt efternamn.."
-            />
-  
-            <label for="country">Land</label>
-            <select id="country" name="country">
-              <option value="australia">Sverige</option>
-              <option value="canada">Norge</option>
-              <option value="usa">Danmark</option>
-            </select>
-  
-            <label for="subject">Skriv till oss!</label>
-            <textarea
-              id="subject"
-              name="subject"
-              placeholder="Skriv dina frågor här.."
-              style="height: 200px"
-            ></textarea>
-  
-            <input type="submit" value="Skicka" />
-          </form>
-        </div>
-      </section>
-  
-      <!--Footer-->
-      <footer>
-        <div class="Grid__Container">
-          <div id="item1">Lägg in valfritt</div>
-          <div id="item2">Lägg in valfritt</div>
-          <div id="item3">Lägg in valfritt</div>
-          <div id="item4">Lägg in valfritt</div>
-  
-          <div class="Bottom_Column"><p>HUSPUNKTEN.SE</p></div>
-        </div>
-      </footer>
-    </body>
-  </html>
+  </section>
+  <!--Testimonial Section, Grid area-->
+  <section class="testimonial-grid-container">
+    <div id="comment1"></div>
+    <div id="comment2">
+      <h2>En husleverantör med stark framtidsvision!</h2>
+      <p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit
+        amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div id="comment3">
+      <h2>En husleverantör med stark framtidsvision!</h2>
+      <p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit
+        amet.<br>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.</p>
+      <button class="btn2" onclick="window.location.href='#';">Läs mer</button>
+    </div>
+    <div id="comment4"></div>
+  </section>
+  <!--Slideshow-->
+  <section class="slideshow">
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <img src="img/hus1.jpg" alt="hus1" />
+        <h1 class="mySlides-header">Fritidshus 40-60kvm</h1>
+        <p class="mySlides-text">
+          Pris från: <strong>299.000:- inkl moms</strong>
+        </p>
+      </div>
+
+      <div class="mySlides fade">
+        <img src="img/hus2.jpeg" alt="hus2" />
+        <h1 class="mySlides-header">Fritidshus 60-90kvm</h1>
+        <p class="mySlides-text">
+          Pris från: <strong>499.000:- inkl moms</strong>
+        </p>
+      </div>
+
+      <div class="mySlides fade">
+        <img src="img/hus3.jpg" alt="hus3" />
+        <h1 class="mySlides-header">Fritidshus 90-110kvm</h1>
+        <p class="mySlides-text">
+          Pris från: <strong>699.000:- inkl moms</strong>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!--Grid Container-->
+  <section class="title">
+    <h1>Nästa steg</h1>
+  </section>
+  <section class="info-grid-container">
+    <!--Grid Areas-->
+    <div id="info1"></div>
+    <div id="info2">
+      <h2>Hur går processen till?</h2>
+      <p>
+        Vi hjälper dig från idé till nyckelfärdigt hus. Går du i tankarna att
+        beställa ett fritdshus, ett attefallshus, en friggebod eller en
+        permanentbostad från Huspunkten kommer vårt online verktyg vara till
+        stor hjälp!<br />
+        <br />
+        Är du markägare eller exploatör? Se hit! Vi kan snabbt leverera
+        nyckelfärdiga moduler som gör att ni som exploatör kan få ert projekt
+        paketerat med hus eller lägenheter klart på rekordtid.
+      </p>
+    </div>
+
+    <div id="info3">
+      <h2>Upplev huset innan det är byggt!</h2>
+      <p>
+        Med Huspunktens nya app kan du genom din mobiltelefon eller surfplatta
+        placera din utvalda husmodell i verklig miljö.
+        <br />
+        <br />
+        Närliggande byggnader och landskap förstärker verkligheten och visar
+        dig hur ditt hus faktiskt kommer att se ut på just din tomt. Du kan
+        till och med gå in i huset och titta ut genom fönstret.
+        <br />
+        <br />
+        Ladda ner vår app här nedan för att testa redan nu!
+      </p>
+      <div class="download">
+        <div class="google"></div>
+        <div class="ios"></div>
+      </div>
+    </div>
+
+    <div id="info4"></div>
+  </section>
+
+  <!--Choose section grid-->
+  <section class="title">
+    <h1>Välj mellan flera utföranden!</h1>
+  </section>
+  <section class="choose-grid-container">
+    <!--Grid Areas-->
+    <div id="choose1">
+      <img src="img/klimatskal2_icon-284x253.jpeg" alt="klimatskal" style="width: 30%" />
+      <h1 class="choose-title">Klimatskal</h1>
+      <p class="choose-text">
+        Huset är stomrest och väderskyddat. Du behöver enbart bygga klart
+        invändigt – vi lämnar de roligaste byggetapperna till dig!
+      </p>
+    </div>
+    <div id="choose2">
+      <img src="img/nyckelfärdigt_icon-284x253.jpeg" alt="klimatskal" style="width: 30%" />
+      <h1 class="choose-title">Nyckelfärdigt</h1>
+      <p class="choose-text">
+        Nyckelfärdigt innebär att ditt hus är helt färdigt för inflyttning.
+        För dig som inte kan, vill eller har tiden att bygga och koordinera
+        ett husbygge själv!
+      </p>
+    </div>
+    <div id="choose3">
+      <img src="img/anpassa_icon-284x253.jpeg" alt="klimatskal" style="width: 30%" />
+      <h1 class="choose-title">Skräddarsytt</h1>
+      <p class="choose-text">
+        Om ingen av våra modeller passar dig finns möjligheten att få huset
+        arkitektritat helt i enlighet med dina önskemål.
+      </p>
+    </div>
+  </section>
+
+  <!--Section contact form-->
+  <section class="title">
+    <h1>Att fråga är gratis</h1>
+  </section>
+  <section id="form" class="form">
+    <div class="container">
+      <form action="action_page.php" method="post">
+        <label for="fname">Förnamn</label>
+        <input type="text" id="fname" name="firstname" placeholder="Ditt förnamn.." />
+
+        <label for="lname">Efternamn</label>
+        <input type="text" id="lname" name="lastname" placeholder="Ditt efternamn.." />
+
+        <label for="country">Land</label>
+        <select id="country" name="country">
+          <option value="australia">Sverige</option>
+          <option value="canada">Norge</option>
+          <option value="usa">Danmark</option>
+        </select>
+
+        <label for="subject">Skriv till oss!</label>
+        <textarea id="subject" name="subject" placeholder="Skriv dina frågor här.." style="height: 200px"></textarea>
+
+        <input type="submit" value="Skicka" />
+      </form>
+    </div>
+  </section>
+
+  <!--Footer-->
+  <footer>
+    <div class="Grid__Container">
+      <div id="item1">Lägg in valfritt</div>
+      <div id="item2">Lägg in valfritt</div>
+      <div id="item3">Lägg in valfritt</div>
+      <div id="item4">Lägg in valfritt</div>
+
+      <div class="Bottom_Column">
+        <p>HUSPUNKTEN.SE</p>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
